// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`schema=f query=f.graphql 1`] = `
Object {
  "data": Object {
    "allPeople": Object {
      "nodes": Array [
        Object {
          "followers": Object {
            "nodes": Array [
              Object {
                "name": "Bob",
              },
              Object {
                "name": "Eve",
              },
            ],
          },
          "following": Object {
            "nodes": Array [],
          },
          "name": "Alice",
        },
        Object {
          "followers": Object {
            "nodes": Array [
              Object {
                "name": "Eve",
              },
            ],
          },
          "following": Object {
            "nodes": Array [
              Object {
                "name": "Alice",
              },
            ],
          },
          "name": "Bob",
        },
        Object {
          "followers": Object {
            "nodes": Array [],
          },
          "following": Object {
            "nodes": Array [
              Object {
                "name": "Alice",
              },
              Object {
                "name": "Bob",
              },
            ],
          },
          "name": "Eve",
        },
      ],
    },
  },
}
`;

exports[`schema=p query=edge-fields.graphql 1`] = `
Object {
  "data": Object {
    "allTeams": Object {
      "nodes": Array [
        Object {
          "members": Object {
            "edges": Array [
              Object {
                "createdAt": null,
                "node": Object {
                  "personName": "Person1",
                },
              },
              Object {
                "createdAt": null,
                "node": Object {
                  "personName": "Person2",
                },
              },
            ],
          },
          "teamName": "Team1",
        },
        Object {
          "members": Object {
            "edges": Array [
              Object {
                "createdAt": null,
                "node": Object {
                  "personName": "Person1",
                },
              },
            ],
          },
          "teamName": "Team2",
        },
        Object {
          "members": Object {
            "edges": Array [],
          },
          "teamName": "Team3",
        },
      ],
    },
  },
}
`;

exports[`schema=p query=many-to-many.graphql 1`] = `
Object {
  "data": Object {
    "a": Object {
      "nodes": Array [
        Object {
          "personName": "Person1",
          "teamsByMembershipPersonIdAndTeamId": Object {
            "nodes": Array [
              Object {
                "teamName": "Team1",
              },
              Object {
                "teamName": "Team2",
              },
            ],
          },
        },
        Object {
          "personName": "Person2",
          "teamsByMembershipPersonIdAndTeamId": Object {
            "nodes": Array [
              Object {
                "teamName": "Team1",
              },
            ],
          },
        },
        Object {
          "personName": "Person3",
          "teamsByMembershipPersonIdAndTeamId": Object {
            "nodes": Array [],
          },
        },
      ],
    },
    "b": Object {
      "nodes": Array [
        Object {
          "members": Object {
            "nodes": Array [
              Object {
                "personName": "Person1",
              },
              Object {
                "personName": "Person2",
              },
            ],
          },
          "teamName": "Team1",
        },
        Object {
          "members": Object {
            "nodes": Array [
              Object {
                "personName": "Person1",
              },
            ],
          },
          "teamName": "Team2",
        },
        Object {
          "members": Object {
            "nodes": Array [],
          },
          "teamName": "Team3",
        },
      ],
    },
  },
}
`;

exports[`schema=t query=edge-fields.graphql 1`] = `
Object {
  "data": Object {
    "allTeams": Object {
      "nodes": Array [
        Object {
          "members": Object {
            "edges": Array [
              Object {
                "data": Array [],
                "node": Object {
                  "personName": "Person1",
                },
              },
              Object {
                "data": Array [],
                "node": Object {
                  "personName": "Person2",
                },
              },
            ],
          },
          "teamName": "Team1",
        },
        Object {
          "members": Object {
            "edges": Array [
              Object {
                "data": Array [],
                "node": Object {
                  "personName": "Person1",
                },
              },
            ],
          },
          "teamName": "Team2",
        },
        Object {
          "members": Object {
            "edges": Array [],
          },
          "teamName": "Team3",
        },
      ],
    },
  },
}
`;

exports[`schema=t query=many-to-many.graphql 1`] = `
Object {
  "data": Object {
    "a": Object {
      "nodes": Array [
        Object {
          "personName": "Person1",
          "teamsByMembershipPersonIdAndTeamId": Object {
            "nodes": Array [
              Object {
                "teamName": "Team1",
              },
              Object {
                "teamName": "Team2",
              },
            ],
          },
        },
        Object {
          "personName": "Person2",
          "teamsByMembershipPersonIdAndTeamId": Object {
            "nodes": Array [
              Object {
                "teamName": "Team1",
              },
            ],
          },
        },
        Object {
          "personName": "Person3",
          "teamsByMembershipPersonIdAndTeamId": Object {
            "nodes": Array [],
          },
        },
      ],
    },
    "b": Object {
      "nodes": Array [
        Object {
          "members": Object {
            "nodes": Array [
              Object {
                "personName": "Person1",
              },
              Object {
                "personName": "Person2",
              },
            ],
          },
          "teamName": "Team1",
        },
        Object {
          "members": Object {
            "nodes": Array [
              Object {
                "personName": "Person1",
              },
            ],
          },
          "teamName": "Team2",
        },
        Object {
          "members": Object {
            "nodes": Array [],
          },
          "teamName": "Team3",
        },
      ],
    },
  },
}
`;
